--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,7 @@
 @import "_assets/sass/head";
 
 @import "_assets/sass/config/utilities.scss";
+@import "_assets/sass/config/extends.scss";
 @import "_assets/sass/config/config.scss";
 
 @import "_assets/sass/inc/header.scss";
