center align comment pagination

--- a/_assets/sass/single.scss
+++ b/_assets/sass/single.scss
@@ -89,6 +89,7 @@
                 .pagination {
                     
                     background: none;
+                    text-align: center;
                     
                     &:hover {
                         
