start styling for v2

--- a/_assets/sass/config/config.scss
+++ b/_assets/sass/config/config.scss
@@ -26,3 +26,6 @@ $color-href-three-hvr: #bd330a;
 $color-pagination: blue;
 $color-pagination-href: red;
 $color-pagination-href-hvr: green;
+
+// breakpoints
+$breakpoint-sm: 780px;
