--- a/_assets/sass/inc/header.scss
+++ b/_assets/sass/inc/header.scss
@@ -2,6 +2,7 @@ header {
     
     background: $background-secondary;
     height: 80px;
+    border-bottom: solid 4px gold;
     
     h1 {
         
