update import list

--- a/style.scss
+++ b/style.scss
@@ -8,5 +8,6 @@
 
 @import "_assets/sass/main.scss";
 @import "_assets/sass/single.scss";
+@import "_assets/sass/page.scss";
 
 @import "_assets/sass/inc/footer.scss";
