--- a/_assets/sass/main.scss
+++ b/_assets/sass/main.scss
@@ -24,10 +24,22 @@ body {
             
             .pagination {
                 
+                display: block;
+                margin: 10px auto;
                 border: solid red 1px;
                 padding: 10px;
                 background: yellow;
                 text-align: center;
+                width: 70%;
+            }
+            
+            .entry {
+                
+                display: block;
+                margin: 10px auto;
+                border: solid red 1px;
+                padding: 10px;
+                width: 70%;
             }
         }
         
