--- a/_assets/sass/page.scss
+++ b/_assets/sass/page.scss
@@ -10,7 +10,11 @@ body {
 
                 @extend %page_title;
             }
+            
+            @extend %link-colscheme-1;
+            
         }
 
     }
+    
 }
