--- a/_assets/sass/main.scss
+++ b/_assets/sass/main.scss
@@ -1,4 +1,4 @@
-/* styles.scss - starts here */ 
+/* main.scss - starts here */ 
 
 body {
     
@@ -18,6 +18,7 @@ body {
                 
                 width: auto;
             }
+            
             span.post_headline {
 
                 @extend %page_title;
@@ -37,6 +38,11 @@ body {
                 width: 70%;
                 
                 @extend %link-colscheme-1;
+                
+                .current {
+                    
+                    font-weight: bold;
+                }
             }
             
             .entry {
@@ -129,8 +135,12 @@ body {
         
     }
     
+    
     .section_single,
-    .section_page {
+    .section_page,
+    .section_archive, 
+    .section_author, 
+    .section_category {
         
         h2 {
             
