--- a/_assets/sass/main.scss
+++ b/_assets/sass/main.scss
@@ -174,6 +174,23 @@ body {
             
         }
         
+        h4.align-center {
+            
+            margin-top: 15px;
+        }
+        
+        h4.align-center,
+        .posts_available {
+            
+            text-align: center;
+            font-weight: bold;
+            
+            .total_results {
+                
+                color: red;
+            }
+        }
+        
     }
     
     .section_archive {
